--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -42,7 +42,7 @@ audio{
     display: grid;        
     height: 59px;    
     background: #eff3f6;
-    grid-template-columns: auto auto auto auto auto auto auto auto;
+    grid-template-columns: 0.3fr 1fr 0.5fr;
 }
 .convai-share{
     display: flex;
