--- a/app/resources/css/app.css
+++ b/app/resources/css/app.css
@@ -16,7 +16,7 @@
     font-weight: 500;
 }
 body{
-    background: #0000009c;
+    background:#141515;
     font-family: 'proxima-nova';
     font-weight: 400;
 }
@@ -153,7 +153,7 @@ audio{
     outline: none;
     margin-left: 20px;
     font-family: 'proxima-nova';
-    background-image: url('../images/search.svg');
+    background-image: url('/app/resources/images/search.svg');
     background-size: 15px;
     background-repeat: no-repeat;
     background-position: 10px center;
@@ -267,7 +267,7 @@ audio{
     display: inline-block;
     min-width: 80px;
     text-align: center;
-    font-weight: 500;
+    font-weight: 400;
 }
 
 .running-time {
