--- a/app/resources/css/app.css
+++ b/app/resources/css/app.css
@@ -153,7 +153,7 @@ audio{
     outline: none;
     margin-left: 20px;
     font-family: 'proxima-nova';
-    background-image: url('/app/resources/images/search.svg');
+    background-image: url('../images/search.svg');
     background-size: 15px;
     background-repeat: no-repeat;
     background-position: 10px center;
